2007-07-01  Jens Granseuer  <jensgr@gmx.net>

	* gnome-settings-background.c:
	(gnome_settings_module_background_start): if we don't take over
	the background because nautilus is running, don't treat that as
	an error

2007-07-01  Jens Granseuer  <jensgr@gmx.net>

	* gnome-settings-accessibility-keyboard.c:
	(gnome_settings_module_accessibility_keyboard_get_type):
	* gnome-settings-background.c:
	(gnome_settings_module_background_get_type):
	* gnome-settings-clipboard.c:
	(gnome_settings_module_clipboard_get_type):
	* gnome-settings-default-editor.c:
	(gnome_settings_module_default_editor_get_type):
	* gnome-settings-font.c: (gnome_settings_module_font_get_type):
	* gnome-settings-gtk1theme.c:
	(gnome_settings_module_gtk1_get_type):
	* gnome-settings-keybindings.c:
	(gnome_settings_module_keybindings_get_type):
	* gnome-settings-keyboard.c:
	(gnome_settings_module_keyboard_get_type):
	* gnome-settings-module.c: (gnome_settings_module_get_type):
	* gnome-settings-mouse.c: (gnome_settings_module_mouse_get_type):
	* gnome-settings-multimedia-keys.c:
	(gnome_settings_module_multimedia_keys_get_type):
	* gnome-settings-screensaver.c:
	(gnome_settings_module_screensaver_get_type):
	* gnome-settings-sound.c: (gnome_settings_module_sound_get_type):
	* gnome-settings-typing-break.c:
	(gnome_settings_module_typing_break_get_type):
	* gnome-settings-xrdb.c: (gnome_settings_module_xrdb_get_type):
	* gnome-settings-xsettings.c:
	(gnome_settings_module_xsettings_get_type): reduce static data

2007-07-01  Jens Granseuer  <jensgr@gmx.net>

	* factory.c: (main):
	* gnome-settings-keybindings.c:
	* gnome-settings-mouse.c:
	* gnome-settings-screensaver.c: (key_toggled_cb):
	* gnome-settings-xrdb.c: fix compiler warnings (closes bug #438152)

2007-06-29  Jens Granseuer  <jensgr@gmx.net>

	* actions/acme.glade:
	* gsd-media-keys-window.c: (gsd_media_keys_window_init): add a frame to
	the media popup (closes bug #451674)

2007-06-22  Rodrigo Moya <rodrigo@gnome-db.org>
